--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 		margin: 0;
 		padding: 0;
-		background-image: url('C:/Users/Omkar Patange/Desktop/All PhotoShopWork/Resourses_Images/background-2.jpg');
+		background-image: url('background-2.jpg');
 		background-attachment: fixed;
 		background-position: center;
 		background-size: cover;
