--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 		background-attachment: fixed;
 		background-position: center;
 		background-size: cover;
+		width: 100%;
+		height: 100vh;
+		background-repeat: no-repeat;
 		overflow-x: hidden;
 		
 	}
